objects/ltcomm__Coupon__c.object
<CustomObject>
    <fields>
        <fullName>Coupon_Total_Value__c</fullName>
        <description>Calculate the total amount invested on a coupon.</description>
        <formula>ltcomm__Value__c  *  ltcomm__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coupon Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mentorship_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mentorship Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the Target Account for the coupon</inlineHelpText>
        <label>Target Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Coupons</relationshipLabel>
        <relationshipName>Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <inlineHelpText>Please select the target of the coupon</inlineHelpText>
        <label>Target Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Learner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltcomm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__Coupon_Code__c</fullName>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ltcomm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ltcomm__Max_Discount__c</fullName>
        <description>The maximum value that a coupon can have in one usage</description>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Max_Lifetime_Discount__c</fullName>
        <description>The maximum value that a coupon can have in total</description>
        <label>Max Lifetime Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Min_Cart__c</fullName>
        <description>The minimum amount that must be in the cart for the coupon to be valid.</description>
        <label>Min Cart</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltcomm__Min_Seats__c</fullName>
        <description>The minimum number of seats that must be purchased for the coupon to be valid.</description>
        <label>Min Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ltcomm__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ltcomm__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Dollar value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltcomm__Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ltcomm__Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ltcomm__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Coupon</label>
    <listViews>
        <fullName>All_Coupons</fullName>
        <columns>NAME</columns>
        <columns>ltcomm__Coupon_Code__c</columns>
        <columns>ltcomm__Value__c</columns>
        <columns>ltcomm__Valid_From__c</columns>
        <columns>ltcomm__Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Coupons</label>
    </listViews>
    <listViews>
        <fullName>ltcomm__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Target_Type__c</columns>
        <columns>Target_Account__c</columns>
        <columns>ltcomm__Type__c</columns>
        <columns>ltcomm__Active__c</columns>
        <columns>ltcomm__Quantity__c</columns>
        <columns>ltcomm__Value__c</columns>
        <columns>ltcomm__Valid_To__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ltcomm__Disable_Negative_Integers</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
            ltcomm__Min_Seats__c &lt; 0, ltcomm__Max_Discount__c &lt; 0,
            ltcomm__Min_Cart__c &lt; 0, ltcomm__Max_Lifetime_Discount__c &lt; 0,
            ltcomm__Quantity__c &lt; 0
            )</errorConditionFormula>
        <errorMessage>The integer must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ltcomm__Percentage_Coupon_Value</fullName>
        <active>true</active>
        <description>If a user selects a coupon type = percentage, the &quot;Value&quot; field should be limited from 0
            to 100.</description>
        <errorConditionFormula>AND(ISPICKVAL(ltcomm__Type__c , &apos;Percentage&apos;),
            OR(ltcomm__Value__c &lt; 0, ltcomm__Value__c &gt; 100))</errorConditionFormula>
        <errorDisplayField>ltcomm__Value__c</errorDisplayField>
        <errorMessage>Value must be between 0 and 100.</errorMessage>
    </validationRules>
</CustomObject>